# bazelreact

./: BUILD  MODULE.bazel  WORKSPACE
frontend/: BUILD  package.json  pnpm-lock.yaml
